Update description of Riddly Bot in index.html

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div>
                 <i class="fab fa-telegram card-icon"></i>
                 <h3>Riddly Bot</h3>
-                <p>An intelligent Telegram chatbot designed for interaction and utility. Built with Python for speed and reliability.</p>
+                <p>An intelligent Telegram chatbot designed for fun. It will ask u brain challenging Riddles. Built with Python for speed and reliability.</p>
             </div>
             <a href="https://t.me/riddly_bot" target="_blank" class="btn">
                 Chat with Riddly <i class="fas fa-arrow-right" style="margin-left: 8px; font-size: 0.8rem;"></i>
